welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:34: error: expected start of definition
override def run() {
         ^MethodsPicture:48: error: Unmatched closing brace '}' ignored here
}
^